--- a/t/th/the/thefair.com.html
+++ b/t/th/the/thefair.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the thefair.com privacy policy that was archived on 2016-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161224093610id_/http%3A//www.thefair.com/utility/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thefair.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606005136id_/http%3A//www.thefair.com/utility/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="no-js"><!--<![endif]--><head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Privacy Policy: Information: Washington State Fair Events Center</title>
-  <meta name="description" content="The Washington State Fair in Puyallup is the largest attraction in WA. The April Spring Fair offers delicious Fair food, baby animals, and fun.">
-  <meta name="keywords" content="Fair, Corn Dogs, Events, Puyallup, Seattle Fair, Fun, State, State Fair, Washington, Puyallup Fair, WA State Fair, Rodeo, Concerts, Events Center, Washington State Fair Events Center, family, kids fun, kid activities, rides, food, group events, fairgrounds, Spring Fair, Washington State Fair Concerts, do the Puyallup">
+  <meta name="description" content="The Washington State Fair is one of the biggest fairs in the world and the largest in the Pacific Northwest. It started in 1900 in Puyallup and welcomes over one million guests to the single largest attended event in the state. Star-studded entertainment, the PRCA Rodeo, rides, exhibits, food, flowers and animals are mainstays of the 20-day event that kicks off the Friday of Labor Day weekend.">
+  <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"><link rel="stylesheet" type="text/css" href="https://wfaprod-1290.kxcdn.com/resources/compiled/css/screen.css?v=1" media="screen"><link rel="stylesheet" type="text/css" href="https://wfaprod-1290.kxcdn.com/resources/compiled/css/print.css?v=1" media="print"><!--[if lt IE 9]><link rel="stylesheet" type="text/css" href="https://wfaprod-1290.kxcdn.com/resources/compiled/css/ie.css?v=1" media="screen" /><![endif]--><link rel="stylesheet" type="text/css" href="https://wfaprod-1290.kxcdn.com/themes.css?v=1" media="all"><script src="https://js-agent.newrelic.com/nr-974.min.js"></script><script async="" src="//s.btstatic.com/tag.js#site=dcKDAzq"></script><script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="https://wfaprod-1290.kxcdn.com/resources/core/bower/modernizr/modernizr.js?v=1"></script><script type="text/javascript" src="https://wfaprod-1290.kxcdn.com/resources/core/bower/jquery/dist/jquery.min.js?v=1"></script><script type="text/javascript" src="https://wfaprod-1290.kxcdn.com/resources/core/bower/jquery-ui/jquery-ui.min.js?v=1"></script><script type="text/javascript" src="https://wfaprod-1290.kxcdn.com/resources/core/bower/underscore/underscore-min.js?v=1"></script><script type="text/javascript" src="https://wfaprod-1290.kxcdn.com/resources/core/bower/vex/js/vex.min.js?v=1"></script><!-- Google Analytics Code -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -51,13 +51,13 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
       <span class="count-down-date-container">
         <span class="count-down-date">
           <span class="count-down-date-body">
-            <span class="count-down-date-value"><div class=""><a href="/state-fair" style="color: inherit; text-decoration:none;">April 20-23</a></div></span>
+            <span class="count-down-date-value"><div class=""><a href="/spring-fair" style="color: inherit; text-decoration:none;">S</a>eptember 1 - 24</div></span>
             <span class="count-down-date-context"><div class=""></div></span>
           </span>
         </span>
       </span>
       <span class="count-down-time js-count-down-time">
-        <span class="">        <span class="count-down-target js-count-down-target">April 20, 2017 14:00:00 PDT</span>
+        <span class="">        <span class="count-down-target js-count-down-target">September 1, 2017 10:00:00 PDT</span>
         <span class="count-down-days">
           <span class="count-down-value js-count-down-value" data-unit="days">––</span>
           <span class="count-down-unit">days</span>
@@ -74,7 +74,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
             </span>
           </span>
         </span>
-        <span class="count-down-message"><span class="">Until Spring Fair</span></span>
+        <span class="count-down-message"><span class="">Until State Fair</span></span>
         </span>      </span>
       </div>
       <div class="constrained masthead-inner">
@@ -103,7 +103,7 @@ window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){va
           <nav class="primarynav" id="mainmenu">
             <h2 class="listheader"><a href="#" class="majorlink s-trigger" data-target="#dashboard" data-indicator="#menuToggle">Main Menu</a></h2>
           </nav>
-          <div class=""><nav class="primarynav"><h2 class="listheader"><a href="/plan-your-trip" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Plan Your Trip</a></h2><div class="primarynav-linklist"><a href="/plan-your-trip/maps-travel">Travel Info</a><a href="/plan-your-trip/hours-pricing">Fair Hours &amp; Pricing</a><a href="/deals">Deals &amp; Discounts</a><a href="/map">Interactive Map</a><a href="/plan-your-trip/guest-services">Guest Services</a><a href="/plan-your-trip/transportation">Public Transportation</a><a href="/deals/group-sales">Group Sales</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="http://www.thefair.com/fun" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">See What's Fun</a></h2><div class="primarynav-linklist"><a href="/state-fair">Washington State Fair</a><a href="/concerts">Concert Series</a><a href="/rodeo">Rodeo</a><a href="/fun/free-music-entertainment">Free Music &amp; Shows</a><a href="/fun/attractions">Attractions</a><a href="/food">Food &amp; Drink</a><a href="/fun/animals">Animals</a><a href="/contests">Contests</a><a href="/spring-fair">Spring Fair</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="/participate" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Participate</a></h2><div class="primarynav-linklist"><a href="/participate/exhibit-entries">Competitive Exhibits</a><a href="/participate/vendor-information">Vendor Info</a><a href="/sponsorship">Sponsorship</a><a href="/participate/employment">Employment</a><a href="/participate/performers">Performers</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="/foundation" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Foundation</a></h2><div class="primarynav-linklist"><a href="/foundation/about">About</a><a href="/foundation/projects-and-programs">Programs &amp; Projects</a><a href="/foundation/giving-opportunities">Giving Opportunities</a><a href="/foundation/events">Events</a><a href="/foundation/projects-and-programs/scholarships">Scholarships</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="/facilities" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Events Center</a></h2><div class="primarynav-linklist"><a href="/facilities/request-information">Request Info</a><a href="/facilities/event-handbook">Handbook</a><a href="/facilities/contacts">Contacts</a><a href="/facilities/facility_download">Downloads</a><a href="/facilities/facility-ada-info">ADA Information</a><a href="/weddings">Weddings</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="/espanol" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Español</a></h2></nav></div>          <nav class="secondarynav">
+          <div class=""><nav class="primarynav"><h2 class="listheader"><a href="/plan-your-trip" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Plan Your Trip</a></h2><div class="primarynav-linklist"><a href="/plan-your-trip/maps-travel">Travel Info</a><a href="/plan-your-trip/hours-pricing">Fair Hours &amp; Pricing</a><a href="/tickets">Buy Tickets</a><a href="/deals">Deals &amp; Discounts</a><a href="/map">Interactive Map</a><a href="/plan-your-trip/guest-services">Guest Services</a><a href="/plan-your-trip/transportation">Public Transportation</a><a href="/deals/group-sales">Group Sales</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="http://www.thefair.com/state-fair" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">See What's Fun</a></h2><div class="primarynav-linklist"><a href="/state-fair">Washington State Fair</a><a href="/concerts">Concert Series</a><a href="/rodeo">Rodeo</a><a href="/contests">Contests</a><a href="/spring-fair">Spring Fair</a><a href="/spring-fair/motorsport-mayhem">Motorsport Mayhem</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="/participate" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Participate</a></h2><div class="primarynav-linklist"><a href="/participate/exhibit-entries">Competitive Exhibits</a><a href="/participate/vendor-information">Vendor Info</a><a href="/sponsorship">Sponsorship</a><a href="/participate/employment">Employment</a><a href="/participate/performers">Performers</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="/foundation" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Foundation</a></h2><div class="primarynav-linklist"><a href="/foundation/about">About</a><a href="/foundation/projects-and-programs">Programs &amp; Projects</a><a href="/foundation/giving-opportunities">Giving Opportunities</a><a href="/foundation/events">Events</a><a href="/foundation/projects-and-programs/scholarships">Scholarships</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="/facilities" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Events Center</a></h2><div class="primarynav-linklist"><a href="/facilities/request-information">Request Info</a><a href="/facilities/event-handbook">Handbook</a><a href="/facilities/contacts">Contacts</a><a href="/facilities/facility_download">Downloads</a><a href="/facilities/facility-ada-info">ADA Information</a><a href="/weddings">Weddings</a></div></nav><nav class="primarynav"><h2 class="listheader"><a href="/espanol" data-target="#dashboard" data-indicator="#menuToggle" class="majorlink js-hover-trigger ">Español</a></h2></nav></div>          <nav class="secondarynav">
             <div class=""> <span class="linkset"><a href="/mobile-app" class="majorlink majorlink-secondary ">Mobile App</a><a href="/social" class="majorlink majorlink-secondary ">Social Buzz</a><a href="/contests" class="majorlink majorlink-secondary ">Contests</a><a href="/education" class="majorlink majorlink-secondary ">Education</a><a href="/media" class="majorlink majorlink-secondary ">Media &amp; News</a><a href="/about-us" class="majorlink majorlink-secondary ">About Us</a><a href="/contact" class="majorlink majorlink-secondary ">Contact Us</a></span></div><div class=""><a href="https://www.facebook.com/WashingtonStateFair" target="_blank"><img alt="" src="https://wfaprod-1290.kxcdn.com/_assets/58a54a93d447d25498b5abf2da857eb8/Facebook_MenuIcon.png" style="width: 23px; height: 25px;"></a><a href="https://twitter.com/WAStateFair" target="_blank"><img alt="" src="https://wfaprod-1290.kxcdn.com/_assets/3e4260ec545d04884e841dc042baf66e/Twitter_MenuIcon.png" style="width: 23px; height: 25px;"></a><a href="http://instagram.com/wastatefair" target="_blank"><img alt="" src="https://wfaprod-1290.kxcdn.com/_assets/4fd51d113098696e11bc9c525f0bd05e/Instagram_MenuIcon.png" style="width: 23px; height: 25px;"></a><a href="https://www.youtube.com/channel/UC5BrKlttTr6mtatDT0gydqA" target="_blank"><img alt="" src="https://wfaprod-1290.kxcdn.com/_assets/140f5e2e1909d5018c6db4380a6d61b9/YouTube_MenuIcon.png" style="width: 29px; height: 25px;"></a></div>          </nav>
         </div>
       </div>
@@ -219,9 +219,19 @@ Puyallup, Washington 98371</p>
 						<span class="imageUrl">http://www.columbiabank.com</span>
 					</span>
                       <span class="imageSet">
-						<span class="imageTitle">BECU</span>
-						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/58ec8f3f900dfd311b8ea13a1c0ccf16/(logoHiRes)_BECU.png</span>
-						<span class="imageUrl">http://www.BECU.org</span>
+						<span class="imageTitle">Coca-Cola</span>
+						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/b0be1d56e618ac7a1b603c7b0574178e/(logoHiRes)_Coca-Cola.jpg</span>
+						<span class="imageUrl">http://www.coca-colastore.com/</span>
+					</span>
+                      <span class="imageSet">
+						<span class="imageTitle">Mattress Firm</span>
+						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/694fe2940d7242413cf56f33e7d614c2/(logoHiRes)_MattressFirm.jpg</span>
+						<span class="imageUrl">http://www.mattressfirm.com/</span>
+					</span>
+                      <span class="imageSet">
+						<span class="imageTitle">Budweiser</span>
+						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/39c66bcb9e8f026cee92441d8da156e6/(logoHiRes)_Budweiser.jpg</span>
+						<span class="imageUrl">http://www.budweiser.com/</span>
 					</span>
                       <span class="imageSet">
 						<span class="imageTitle">O'Reilly Auto Parts</span>
@@ -229,34 +239,39 @@ Puyallup, Washington 98371</p>
 						<span class="imageUrl">http://www.oreillyauto.com/</span>
 					</span>
                       <span class="imageSet">
+						<span class="imageTitle">Les Schwab Tire Centers Washington</span>
+						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/174b59307ee9c1ca7f358e51e7e3c85c/(logoHiRes)_Les-Schwab.jpg</span>
+						<span class="imageUrl">http://lesschwab.com/store/wa</span>
+					</span>
+                      <span class="imageSet">
+						<span class="imageTitle">Xfinity</span>
+						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/c0a58305f7ebb2fc87715fe08de72748/(logoHiRes)_Xfinity.jpg</span>
+						<span class="imageUrl">http://xfinity.comcast.net/</span>
+					</span>
+                      <span class="imageSet">
+						<span class="imageTitle">Dish Network</span>
+						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/0f3b288ef60195765655c0ea94afea75/(logoHiRes)_DishNetwork_SponsorLogo.jpg</span>
+						<span class="imageUrl">http://www.dish.com/</span>
+					</span>
+                      <span class="imageSet">
+						<span class="imageTitle">Safeway</span>
+						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/1550790250bb4149e09c322a8695345a/(logoHiRes)_Safeway.png</span>
+						<span class="imageUrl">http://www.safeway.com/IFL/Grocery/Home</span>
+					</span>
+                      <span class="imageSet">
+						<span class="imageTitle">Fred Meyer</span>
+						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/503387ab1059d9824ae1569659092db8/(logoHiRes)_Fred-Meyer.jpg</span>
+						<span class="imageUrl">http://www.fredmeyer.com</span>
+					</span>
+                      <span class="imageSet">
+						<span class="imageTitle">Waste Connections</span>
+						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/1ab48e3793448a1320c6ba0bbf1e8f46/(logoHiRes)_Waste-Connections.jpg</span>
+						<span class="imageUrl">http://www.wasteconnections.com</span>
+					</span>
+                      <span class="imageSet">
 						<span class="imageTitle">KIRO</span>
 						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/3f31c345ed56406b840ce32f71c8cdf4/(logoHiRes)_KIRO.jpg</span>
 						<span class="imageUrl">http://www.kiro7.com/</span>
-					</span>
-                      <span class="imageSet">
-						<span class="imageTitle">Coca-Cola</span>
-						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/b0be1d56e618ac7a1b603c7b0574178e/(logoHiRes)_Coca-Cola.jpg</span>
-						<span class="imageUrl">http://www.coca-colastore.com/</span>
-					</span>
-                      <span class="imageSet">
-						<span class="imageTitle">Sleep Train</span>
-						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/e567f775cddeda8b544df2ef8ddd787a/(logoHiRes)_SleepTrain_SponsorLogo.jpg</span>
-						<span class="imageUrl">http://www.sleeptrain.com/</span>
-					</span>
-                      <span class="imageSet">
-						<span class="imageTitle">Ford</span>
-						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/822d3f831ab38e02e527496e656a5d5d/(logoHiRes)_Ford.jpg</span>
-						<span class="imageUrl">http://www.compareford.com/</span>
-					</span>
-                      <span class="imageSet">
-						<span class="imageTitle">Washington Lottery</span>
-						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/983dd942ba147b4a3081c062a29d7863/(logoHiRes)_Washington-Lottery.jpg</span>
-						<span class="imageUrl">http://www.walottery.com</span>
-					</span>
-                      <span class="imageSet">
-						<span class="imageTitle">Tractor Supply Co.</span>
-						<span class="imagePath">https://wfaprod-1290.kxcdn.com/_assets/c4ceb485e9e4c3beb6ec169a3c434998/(logoHiRes)_TractorSupplyCo.jpg</span>
-						<span class="imageUrl">http://www.tractorsupply.com/</span>
 					</span>
           </div>        <div class="image-rotator">
           <div class="frame">
@@ -287,7 +302,7 @@ Puyallup, Washington 98371</p>
             <nav class="legal-links">
               <div class=""><a href="/utility/terms-of-use">Terms of Use</a><a href="/utility/privacy-policy">Privacy Policy</a></div>            </nav>
             <small class="copyright">
-              <div class="">© 2016 Washington State Fair</div>            </small>
+              <div class="">© 2017 Washington State Fair</div>            </small>
           </div>
         </div>
       </div>
