--- a/g/gl/glo/globalsecurity.org.html
+++ b/g/gl/glo/globalsecurity.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the globalsecurity.org privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119043106id_/http%3A//www.globalsecurity.org/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the globalsecurity.org privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606005252id_/http%3A//www.globalsecurity.org/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- InstanceBegin template="/Templates/global.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="head" -->
@@ -206,13 +206,17 @@ Opting out of a network does not mean you will no longer receive online advertis
 <a href="/org/interns.htm" title="GlobalSecurity.org Internships">Internships</a> <span class="navsep">|</span>
 <a href="/sitemap.htm" title="GlobalSecurity.org Site Map">Site Map</a> <span class="navsep">|</span>
 <a href="/privacy.htm" title="GlobalSecurity.org Privacy Policy">Privacy</a></div>
-<div id="footer"><a href="http://www.globalsecurity.org/copyright.htm" title="Copyright">Copyright</a> © 2000-2016 GlobalSecurity.org All rights reserved.<br>
+<div id="footer"><a href="http://www.globalsecurity.org/copyright.htm" title="Copyright">Copyright</a> © 2000-2017 GlobalSecurity.org All rights reserved.<br>
   Site maintained by: <a href="http://www.globalsecurity.org/org/staff/pike.htm" title="John Pike">John Pike</a><br>
 
 <div class="pubs-container">
-<!-- start Vibrant Media IntelliTXT script section -->
-<script type="text/javascript" src="http://globalsecurity.us.intellitxt.com/intellitxt/front.asp?ipid=7736"></script>
-<!-- end Vibrant Media IntelliTXT script section -->
+<!-- start Infolinks script section -->
+<script type="text/javascript">
+var infolinks_pid = 2957140;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+<!-- end Infolinks script section -->
 <!-- start TF mobile section -->
 <script type="text/javascript"><!--
 
