--- a/c/ca/car/cari.co.in.html
+++ b/c/ca/car/cari.co.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cari.co.in privacy policy that was archived on 2016-11-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161123091841id_/http%3A//www.cari.co.in/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cari.co.in privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606005303id_/http%3A//www.cari.co.in/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" xmlns:fb="https://ogp.me/ns/fb#"><head>
 <title>Privacy Policy - Find used cars, used bikes, homes, jobs and vacancies in India</title>
@@ -28,6 +28,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/Ladda/0.9.8/ladda-themeless.min.css" rel="stylesheet">
 <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/platform.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
+<script type="text/javascript" src="//static.criteo.net/js/ld/publishertag.js"></script>
 <script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script>
 	  (adsbygoogle = window.adsbygoogle || []).push({
@@ -295,17 +296,16 @@
 		</div>
     </div><!--/row-->
 	<hr>
-	<p class="text-center">Copyright © 2016 <a href="/" title="Find used cars, used bikes, homes, jobs and vacancies in India">www.cari.co.in</a> All Right Reserved</p>
+	<p class="text-center">Copyright © 2017 <a href="/" title="Find used cars, used bikes, homes, jobs and vacancies in India">www.cari.co.in</a> All Right Reserved</p>
 	<p class="text-center"><a href="#">Back to top</a></p>
 		</div>
 </footer>
 <div class="adsense_bottom_fixed visible-xs text-center">
-	<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	<!-- cari.co_320x50 -->
-	<ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-6137989722452855" data-ad-slot="1174727219"></ins>
-	<script>
-	(adsbygoogle = window.adsbygoogle || []).push({});
-	</script></div>
+	<script type="text/javascript">
+Criteo.DisplayAd({
+    "zoneid": 420863,
+    "async": false});
+</script></div>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="http://cdn.cari.co.in/js/bootstrap/plugins/bootstrap3-typeahead.min.js" type="text/javascript"></script>
 <script src="http://cdn.cari.co.in/js/jquery.lazyload.min.js" type="text/javascript"></script>
