--- a/n/ne/net/netronline.com.html
+++ b/n/ne/net/netronline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the netronline.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119083711id_/http%3A//www.netronline.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the netronline.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606005738id_/http%3A//www.netronline.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-EN"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -36,7 +36,7 @@ $(function() {
 		<a href="http://www.netronline.com"><img src="/images/netr_online_logo.gif" alt="NETROnline"></a>
 	</div>
 	<div id="logo_time">
-		<b>Nov 19, 2016, 1:35 am</b>            
+		<b>Jun 5, 2017, 5:57 pm</b>            
 	</div>
 </div>
 <div id="top_nav">
@@ -63,10 +63,15 @@ $(function() {
         jQuery(document).ready(function(){async_load('asset.pagefair.net/ads.min.js')});
     })();
 </script>
-				<!-- valueclick -->
-			<script type="text/javascript" language="JavaScript">
-				document.write('<scr'+'ipt language="JavaScript" src="http://media.fastclick.net/w/get.media?sid=59837&tp=5&d=j&t=n"></scr'+'ipt>');
-			</script><script language="JavaScript" src="http://media.fastclick.net/w/get.media?sid=59837&amp;tp=5&amp;d=j&amp;t=n"></script>
+	<!-- Index Exchange: 728x90 (Banner) -->
+<script type="text/javascript">
+var CasaleArgs = new Object();
+CasaleArgs.version = 2;
+CasaleArgs.adUnits = "2";
+CasaleArgs.casaleID = 163034;
+</script>
+<script type="text/javascript" src="http://js.casalemedia.com/casaleJTag.js"></script>
+<!-- DO NOT MODIFY -->
 			<!--<noscript>
 		<a href="http://www.burstnet.com/ads/ad8182a-map.cgi/ns/v=2.3S/sz=728x90A/" target="_top">
 			<img src="http://www.burstnet.com/cgi-bin/ads/ad8182a.cgi/ns/v=2.3S/sz=728x90A/" border="0" alt="Click Here" />
@@ -191,7 +196,7 @@ CasaleArgs.casaleID = 163034;
 			<a class="FooterLink" href="http://www.netronline.com/privacy_policy.php">Privacy Policy</a> | 
 			<a class="footerlink" href="http://www.netronline.com/calculators.php">Real Estate Calculators</a> | 
 			<a class="footerlink" href="http://www.netronline.com/site_map.php">Site Map</a>
-	<span style="float:right;">Copyright 1999-2016 Nationwide Environmental Title Research, LLC</span></p>
+	<span style="float:right;">Copyright 1999-2017 Nationwide Environmental Title Research, LLC</span></p>
 </div>
 	<script type="text/javascript">
 
