--- a/a/as/ast/astroica.com.html
+++ b/a/as/ast/astroica.com.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the astroica.com privacy policy that was archived on 2015-10-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20151011030931id_/http%3A//www.astroica.com/m/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the astroica.com privacy policy that was archived on 2017-06-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606005807id_/http%3A//www.astroica.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Astroica.com - Privacy Policy</title>
 <meta name="Keywords" content="astroica.com, privacy policy">
-<style type="text/css">body{margin:0px;padding:10px 0px 10px 0px;background:#fff;font:10px Verdana,Arial,Geneva,Helvetica,sans-serif;color:#481717}a{color:#333;text-decoration:none}li{list-style:decimal}ol{margin:2px 0px 2px 40px;padding:0px}p{margin:15px 0px 10px 0px}</style>
+<style type="text/css">body{margin:0;padding:10px 0 10px 0;background:#fff;font:10px Verdana,Arial,Geneva,Helvetica,sans-serif;color:#481717}a{color:#333;text-decoration:none}li{list-style:decimal}ol{margin:2px 0 2px 40px;padding:0}p{margin:15px 0 10px 0}</style>
 </head>
 <body>
 <center>
 <div align="center">
 <table style="width:780px;" cellpadding="0" cellspacing="0">
-<tbody><tr><td style="height:31px;background-image:url('images/priv_terms_top.gif');padding:0px 20px 0px 10px;" valign="top"><span style="float:left;color:white;font:bold 18px Verdana, Arial, Geneva, Helvetica, sans-serif;">Astroica.com</span><span style="float:right;color:white;font:bold 10px Verdana, Arial, Geneva, Helvetica, sans-serif;line-height:24px;">Privacy Policy</span></td></tr>
+<tbody><tr><td style="height:31px;background-image:url(images/priv_terms_top.gif);padding:0 20px 0 10px" valign="top"><span style="float:left;color:white;font:bold 18px Verdana, Arial, Geneva, Helvetica, sans-serif;">Astroica.com</span><span style="float:right;color:white;font:bold 10px Verdana, Arial, Geneva, Helvetica, sans-serif;line-height:24px;">Privacy Policy</span></td></tr>
 <tr><td><div style="margin-bottom:2px;background:#E0E0E0;height:18px;padding:0px 15px 0px 15px;text-align:center;"><span style="font:bold 10px Verdana, Arial, Geneva, Helvetica, sans-serif;line-height:18px;"><a href="http://www.astroica.com/">Home</a> |<a href="http://www.astroica.com/contact.php">Contact Us</a></span></div></td></tr>
 <tr><td>
 <div style="font:normal 10px Verdana, Arial, Geneva, Helvetica, sans-serif;margin:20px 45px 20px 45px;text-align:justify;">
@@ -56,6 +56,6 @@ To protect against the loss, misuse and alteration of the information under our 
 We reserve the right to change or update these policies at any time upon reasonable notice, effective immediately upon posting to this site.</p>
 </div></td></tr>
 <tr><td><div style="margin-bottom:2px;background:#E0E0E0;height:18px;padding:0px 15px 0px 15px;"><span style="float:left;font:bold 10px Verdana, Arial, Geneva, Helvetica, sans-serif;line-height:18px;"><a href="http://www.astroica.com/">Home</a></span><span style="float:right;font:normal 10px Verdana, Arial, Geneva, Helvetica, sans-serif;line-height:18px;"><a href="http://www.astroica.com/privacy.htm">Privacy Policy</a> :: <a href="http://www.astroica.com/terms.htm">Terms of Service</a> :: <a href="http://www.astroica.com/disclaimer.htm">Disclaimer</a></span></div></td></tr>
-<tr><td style="height:31px;background-image:url('images/priv_terms_bottom.gif');"><span style="float:right;color:white;font:bold 10px Verdana, Arial, Geneva, Helvetica, sans-serif;line-height:28px;margin:3px 20px 0px 0px;">Copyright © astroica.com</span></td></tr>
+<tr><td style="height:31px;background-image:url(images/priv_terms_bottom.gif)"><span style="float:right;color:white;font:bold 10px Verdana, Arial, Geneva, Helvetica, sans-serif;line-height:28px;margin:3px 20px 0px 0px;">Copyright © astroica.com</span></td></tr>
 </tbody></table></div></center>
 </body></html>
